--- a/.travis.yml
+++ b/.travis.yml
@@ -1,75 +1,41 @@
-language: ruby
+---
 sudo: false
-bundler_args: --without development
-before_install: rm Gemfile.lock || true
-rvm:
-- 1.9
-- 2.0
-- 2.1
-script: bundle exec rake test
-env:
-- PUPPET_VERSION="~> 3.2.0"
-- PUPPET_VERSION="~> 3.3.0"
-- PUPPET_VERSION="~> 3.4.0"
-- PUPPET_VERSION="~> 3.5.0"
-- PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=true
-- PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=true
-- PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=true
-- PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=true PARSER="future"
-- PUPPET_VERSION="~> 4.2.0" STRICT_VARIABLES=true
-# - PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=true
-# - PUPPET_VERSION="~> 4.1.0" STRICT_VARIABLES=true
+dist: trusty
+language: ruby
+#cache: bundler
+bundler_args: --without system_tests development
+before_install:
+  - bundle -v
+  - rm Gemfile.lock || true
+  - gem update --system
+  - gem update bundler
+  - gem --version
+  - bundle -v
+script:
+  - 'bundle exec rake $CHECK'
+env: ["CHECK=rubocop", "PUPPET_VERSION=\"~> 4.6.0\" STRICT_VARIABLES=yes CHECK=test", "PUPPET_VERSION=\"~> 4.7.0\" STRICT_VARIABLES=yes CHECK=test", "PUPPET_VERSION=\"~> 4.8.0\" STRICT_VARIABLES=yes CHECK=test", "PUPPET_VERSION=\"~> 4.9.0\" STRICT_VARIABLES=yes CHECK=test", "PUPPET_VERSION=\"~> 4.10.0\" STRICT_VARIABLES=yes CHECK=test", "PUPPET_VERSION=\"~> 5.0.0\" STRICT_VARIABLES=yes CHECK=test"]
+rvm: [2.2, 2.3, 2.4]
 matrix:
   fast_finish: true
+ 
   exclude:
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 3.2.0"
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 3.3.0"
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 3.4.0"
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 3.5.0"
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 3.2.0"
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 3.3.0"
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 3.4.0"
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 3.5.0"
-  - rvm: 1.9
-    env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=true PARSER="future"
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=true PARSER="future"
-  - rvm: 1.9
-    env: PUPPET_VERSION="~> 4.2.0" STRICT_VARIABLES=true
-  - rvm: 2.0
-    env: PUPPET_VERSION="~> 4.2.0" STRICT_VARIABLES=true
-  # - rvm: 1.9
-  #   env: PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=true
-  # - rvm: 1.9
-  #   env: PUPPET_VERSION="~> 4.1.0" STRICT_VARIABLES=true
-  # - rvm: 2.0
-  #   env: PUPPET_VERSION="~> 4.0.0" STRICT_VARIABLES=true
-  # - rvm: 2.0
-  #   env: PUPPET_VERSION="~> 4.1.0" STRICT_VARIABLES=true
-  allow_failures:
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 3.8.0" STRICT_VARIABLES=true PARSER="future"
-  - rvm: 2.1
-    env: PUPPET_VERSION="~> 4.2.0" STRICT_VARIABLES=true
+  - rvm: 2.2
+    env: CHECK=rubocop
+  include:
+  - rvm: 2.4.0
+    env: PUPPET_VERSION="~> 4.0" CHECK=build DEPLOY_TO_FORGE=yes
 notifications:
-  slack:
-    secure: EwJDWYpcaMh5Ebb4EbsVu+nc1QPff/OTT0aYyExl5i7e8YFKUAL6oTNtupo3s/RO1CUBUOcKGvYUmbhuTxo1o/MfKNFviR8xaYNS2sktZ0961jpd5JtLYxaZd91JKLb2ZrMuAckejM17+lMxivu8+PKZnuF7S78DHNLDLVJkBrY=
+  email: false
 deploy:
   provider: puppetforge
-  user: abstractit
+  deploy:
+    branch: ha-bug-puppet-forge
+  user: icann
   password:
-    secure: ZbtzOD15CmlaLJ0zK2qwLLaqXDk+Ile/2nGwZQ3pV5+cx6ILBVHN/cH0PaddVM9z2bV8k/sHN9ZCe5NXEyC54Vta8jCgLvIckS0tRqNICagn5BMhyEg5jSP7IIDhM9pWgF9KiJyMtx+8iWIt6h7v5+HbOylUuSUyhA0ewpFp2GA=
+    secure: ""
   on:
     tags: true
-    rvm: 2.1
-    condition:
-    - $PUPPET_VERSION = '~> 4.2.0'
-    - $STRICT_VARIABLES = true
+    # all_branches is required to use tags
+    all_branches: true
+    # Only publish the build marked with "DEPLOY_TO_FORGE"
+    condition: "$DEPLOY_TO_FORGE = yes"
